# sushi-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  sushi-rust-port-plan.md
crates/api_envelope/: Cargo.toml
crates/api_envelope/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: caret_schema.rs  config.rs  export.rs  ig_export.rs  instance_export.rs  lib.rs  menu.rs  paths.rs  predefined.rs  sd_export.rs  terminology.rs  type_resolver.rs
crates/compiler/tests/: compile_equiv.rs  definition_locations.rs  expand_parity.rs  oracle_tx.rs
crates/content_store/: Cargo.toml  README.md
crates/content_store/src/: lib.rs
crates/content_store/tests/: store.rs
crates/fig/: Cargo.toml
crates/fig/examples/: watch_bench.rs
crates/fig/src/: engine.rs  lib.rs  output_cache.rs  prepare.rs  publication.rs  runner.rs  site.rs  template.rs  watch.rs
crates/fig/src/prepare/: incremental_differential.rs
crates/fig/src/runner/: adapter-runner.mjs
crates/fig/tests/: json_envelope.rs
crates/package_acquisition/: Cargo.toml  resolution-config.json
crates/package_acquisition/src/: lib.rs
crates/package_acquisition/tests/: cas_materialize.rs
crates/package_store/: Cargo.toml
crates/package_store/src/: bundle.rs  derived_index.rs  lib.rs  material.rs  prepared.rs  resolve.rs  source.rs  template_loader.rs  wire.rs
crates/package_store/tests/: template_materialization_gate.rs
crates/prepared_guide/: Cargo.toml
crates/prepared_guide/src/: augment.rs  lib.rs  native.rs  semantics.rs  timefmt.rs
crates/publisher_sql/: Cargo.toml  README.md
crates/publisher_sql/src/: database.rs  expand.rs  lib.rs  output.rs  snapshot.rs
crates/render_liquid/: Cargo.toml  README.md
crates/render_liquid/src/: ast.rs  filters.rs  lexer.rs  lib.rs  parser.rs  provider.rs  render.rs  value.rs
crates/render_liquid/tests/: semantics.rs
crates/render_liquid/tests/corpus/: .gitignore  mock-ctx.json
crates/render_liquid/tests/fixtures/: f_access.json  f_access.liquid  f_andor.json  f_andor.liquid  f_append.liquid  f_assign.liquid  f_breakcont.json  f_breakcont.liquid  f_case.liquid  f_comment.liquid  f_contains.json  f_contains.liquid  f_counter.liquid  f_default.liquid  f_empty.json  f_empty.liquid  f_escape.liquid  f_forelse.json  f_forelse.liquid  f_forhash.json  f_forhash.liquid  f_forloop.json  f_forloop.liquid  f_if_ops.liquid  f_include.liquid  f_offset.json  f_offset.liquid  f_range.liquid  f_raw.liquid  f_replace.liquid  f_sitedata.json  f_sitedata.liquid  f_size.liquid  f_slugify.liquid  f_sortprop.json  f_sortprop.liquid  f_sortuniq.liquid  f_split.liquid  f_split_empty.liquid  f_split_trailing.liquid  (+7 more)
crates/render_md/: Cargo.toml
crates/render_md/src/: block.rs  ial.rs  inline.rs  lib.rs  render.rs  rouge.rs  util.rs
crates/render_md/tests/: fixtures_test.rs
crates/render_md/tests/fixtures/: fenced_code.html  fenced_code.md  footnotes.html  footnotes.md  headings_autoid.html  headings_autoid.md  html-island-nested.html  html-island-nested.md  html-island-p1.html  html-island-p1.md  html-island-p2.html  html-island-p2.md  html-island-p3.html  html-island-p3.md  html-island-p4.html  html-island-p4.md  html-island-p5.html  html-island-p5.md  html-island-p6.html  html-island-p6.md  html-island-p7.html  html-island-p7.md  html-island-p8.html  html-island-p8.md  html-island-p9.html  html-island-p9.md  ial.html  ial.md  inline.html  inline.md  invalid_tag_escape.html  invalid_tag_escape.md  link_ref_ial.html  link_ref_ial.md  lists.html  lists.md  markdown_re_entry.html  markdown_re_entry.md  raw_html_passthrough.html  raw_html_passthrough.md  (+12 more)
crates/render_page/: Cargo.toml
crates/render_page/src/: artifact.rs  lib.rs  sitedata.rs  stock.rs
crates/render_sd/: Cargo.toml
crates/render_sd/src/: aggregates.rs  commonmark.rs  context.rs  deptable.rs  dict.rs  diff.rs  engine.rs  fstxcache.rs  gentypes.rs  grid.rs  ipstmt.rs  leaf.rs  lib.rs  links.rs  markdown.rs  pseudojson.rs  publisher_markdown.rs  sdmodel.rs  span.rs  table.rs  tree.rs  tx.rs  txcache.rs  vscs.rs  xref.rs  xreflist.rs
crates/render_sd/tests/: grid_parity.rs  leaf_parity.rs  snapshot_parity.rs
crates/render_tables/: Cargo.toml
crates/render_tables/src/: build.rs  generate.rs  hashorder.rs  lib.rs  model.rs
crates/render_xhtml/: Cargo.toml
crates/render_xhtml/src/: composer.rs  entities.rs  lib.rs  node.rs  ordermap.rs  parser.rs
crates/render_xhtml/tests/: corpus_gate.rs
crates/rust_sushi/: Cargo.toml
crates/rust_sushi/src/: main.rs
crates/site_build/: Cargo.toml  README.md
crates/site_build/src/: canonical.rs  content.rs  cycle_semantic.rs  lib.rs  model.rs  revision.rs  site_db_compat.rs  site_output.rs  site_output_cache.rs
crates/site_build/tests/: contract.rs  cycle_semantic.rs  prepared_guide.rs  revision.rs  site_db_compat.rs  site_output.rs
crates/site_db/: Cargo.toml
crates/site_db/src/: augment.rs  ledger.rs  lib.rs  main.rs  model.rs  pipeline.rs  projection.rs  rows.rs  writer.rs
crates/site_db/tests/: contract.rs  inmem_vs_disk.rs  ledger.rs  prepared_guide.rs  primary_guide.rs
crates/site_engine/: Cargo.toml
crates/site_engine/src/: compilation.rs  dependency_observation.rs  events.rs  lib.rs  preparation.rs  render_surface.rs  runtime.rs
crates/site_producer/: Cargo.toml
crates/site_producer/assets/licenses/: JQUERY-UI-MIT.txt
crates/site_producer/src/: config.rs  data.rs  lib.rs  menu.rs  publisher_runtime.rs  resource.rs  shells.rs  structural.rs
crates/site_producer/tests/: from_prepared.rs  primary_guide.rs  producer_gate.rs
crates/snapshot_gen/: Cargo.toml
crates/snapshot_gen/src/: cli.rs  convert.rs  legacy.rs  lib.rs  main.rs  merge.rs  package.rs  projection.rs  quirks.rs  sd_load.rs  text.rs
crates/snapshot_gen/tests/: bundle_ladder.rs  convert_parity.rs  layer_b.rs  r5_for_r4_support.rs  snapshot_parity.rs  walk_parity.rs
crates/wasm_api/: Cargo.toml
crates/wasm_api/src/: lib.rs  render_surface.rs
crates/wasm_api/tests/: expand_api.rs  session_api.rs  site_db_snapshot.rs
docs/: README.md  hosting.md  (+28 more)
(+11014 files in other folders)
