[workspace]
resolver = "2"
members = [
    "crates/fsh_lexer_parser",
    "crates/fsh_model",
    "crates/fhir_model",
    "crates/package_acquisition",
    "crates/package_store",
    "crates/compiler",
    "crates/diagnostics",
    "crates/json_emit",
    "crates/rust_sushi",
    "crates/snapshot_gen",
    "crates/site_db",
    "crates/wasm_api",
    "crates/render_xhtml",
    "crates/render_liquid",
    "crates/render_md",
    "crates/render_tables",
    "crates/render_sd",
    "crates/render_page",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.90"

[workspace.dependencies]
# Internal crates
fsh_lexer_parser = { path = "crates/fsh_lexer_parser" }
fsh_model = { path = "crates/fsh_model" }
fhir_model = { path = "crates/fhir_model" }
package_store = { path = "crates/package_store" }
package_acquisition = { path = "crates/package_acquisition" }
compiler = { path = "crates/compiler" }
diagnostics = { path = "crates/diagnostics" }
json_emit = { path = "crates/json_emit" }
snapshot_gen = { path = "crates/snapshot_gen" }
site_db = { path = "crates/site_db", default-features = false }
render_xhtml = { path = "crates/render_xhtml" }
render_liquid = { path = "crates/render_liquid" }
render_md = { path = "crates/render_md" }
render_tables = { path = "crates/render_tables" }
render_sd = { path = "crates/render_sd" }
render_page = { path = "crates/render_page" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["serde", "union"] }
rustc-hash = "2"
mimalloc = { version = "0.1", default-features = false }
anyhow = "1"
thiserror = "2"
flate2 = "1"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
