[package]
name = "content_store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
hex.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
