[package]
name = "fig"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "fig — the unified FHIR IG CLI: one engine, native (fs) skin. IG Publisher output in seconds, no Java, no Jekyll."

[lib]
name = "fig"
path = "src/lib.rs"

[[bin]]
name = "fig"
path = "src/bin/fig.rs"

# Deprecated-alias shims (Consolidation Pass 2): these preserve the old binary
# names + exact byte output for one release, each printing a stderr migration
# note then delegating to the unchanged library entry point the new fig
# subcommand also composes. Deleted next release.
#
# `rust_sushi`'s dev-oracle subcommands (lex/ast/expand/cas/deps/pkg-fish) stay
# in the rust_sushi crate this pass (they are gate infrastructure, not user
# surface, plan §2); its user-facing build/resolve/bundle are `fig build`/
# `fig resolve`/`fig packages bundle`.
[[bin]]
name = "snapshot_gen"
path = "src/bin/snapshot_gen.rs"

[[bin]]
name = "site_db"
path = "src/bin/site_db.rs"

[dependencies]
# The engine core — fig subcommands are arg-parse -> engine-core call -> output.
compiler = { workspace = true }
snapshot_gen = { workspace = true }
site_db = { workspace = true, default-features = true, features = ["sqlite"] }
package_store = { workspace = true }
package_acquisition = { workspace = true }
render_sd = { workspace = true }
render_page = { workspace = true }
site_build = { workspace = true, features = ["site-db-compat"] }
site_producer = { workspace = true }
render_liquid = { workspace = true }
render_md = { workspace = true }
json_emit = { workspace = true }
api_envelope = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

# watch --serve: a tiny blocking HTTP server for live-reload preview. File
# watching is a dependency-free mtime poll (see src/watch.rs) — robust and
# offline, and the dirty-cone recompute is the real cost, not event latency.
tiny_http = "0.12"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
# The shared-schema test compares fig --json envelopes to Session envelopes.
wasm_api = { path = "../wasm_api" }
