[package]
name = "fig"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "fig — the unified FHIR IG CLI: one engine, native (fs) skin. IG Publisher output in seconds, no Java, no Jekyll."

[lib]
name = "fig"
path = "src/lib.rs"

[[bin]]
name = "fig"
path = "src/bin/fig.rs"

# Deprecated-alias shims (Consolidation Pass 2): these preserve the old binary
# names + exact byte output for one release, each printing a stderr migration
# note then delegating to the unchanged library entry point the new fig
# subcommand also composes. Deleted next release.
#
# `rust_sushi`'s dev-oracle subcommands (lex/ast/expand/cas/deps/pkg-fish) stay
# in the rust_sushi crate this pass (they are gate infrastructure, not user
# surface, plan §2); its user-facing build/resolve/bundle are `fig build`/
# `fig resolve`/`fig packages bundle`.
[[bin]]
name = "snapshot_gen"
path = "src/bin/snapshot_gen.rs"

[dependencies]
# The engine core — fig subcommands are arg-parse -> engine-core call -> output.
compiler = { workspace = true }
snapshot_gen = { workspace = true }
package_store = { workspace = true }
package_acquisition = { workspace = true }
site_build = { workspace = true }
site_engine = { workspace = true }
content_store = { workspace = true }
json_emit = { workspace = true }
api_envelope = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[dev-dependencies]
# The shared-schema test compares fig --json envelopes to Session envelopes.
wasm_api = { path = "../wasm_api" }
