[package]
name = "package_acquisition"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
hex.workspace = true
package_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
ureq.workspace = true
walkdir.workspace = true
