[package]
name = "package_store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
wire-contract = ["dep:schemars", "dep:ts-rs"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
rustc-hash.workspace = true
hex.workspace = true
sha2.workspace = true
miniz_oxide.workspace = true
flate2.workspace = true
tar.workspace = true
schemars = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
