[package]
name = "prepared_guide"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
compiler.workspace = true
snapshot_gen.workspace = true
package_store.workspace = true
json_emit.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
