# render_liquid — a standalone Liquid (T1+T2) engine matching Jekyll's
# Shopify-Liquid-4.0.4 behavior, for the stock-template renderer (plan F1c).
[package]
name = "render_liquid"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Just-enough Jekyll/Liquid (T1+T2) engine at Publisher parity"

[dependencies]
# preserve_order: keep JSON object key order = Ruby/YAML insertion order, so
# `{% for x in hash %}` iterates in the same order as the oracle.
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
