[package]
name = "render_page"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "F5: the Jekyll-equivalent page pass — layouts/includes via render_liquid, kramdown via render_md, fragments via render_sd's FragmentEngine, at Publisher byte-parity."

[lib]
name = "render_page"

[[bin]]
name = "pagecorpus"
path = "src/bin/pagecorpus.rs"

[dependencies]
render_liquid = { workspace = true }
render_md = { workspace = true }
render_sd = { workspace = true }
render_xhtml = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
