# Standalone crate — has its OWN [workspace] table so it does NOT join the root
# workspace (another agent churns the root Cargo.toml; integration happens later).
[workspace]

[package]
name = "render_sd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "C1: StructureDefinitionRenderer generateTable/generateGrid + row builders (byte-exact port)"

[lib]
name = "render_sd"

[[bin]]
name = "render-frag"
path = "src/bin/render_frag.rs"

[[bin]]
name = "corpus"
path = "src/bin/corpus.rs"

[dependencies]
render_xhtml = { path = "../render_xhtml" }
render_tables = { path = "../render_tables" }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
