[package]
name = "render_sd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C1: StructureDefinitionRenderer generateTable/generateGrid + row builders (byte-exact port)"

[lib]
name = "render_sd"

[[bin]]
name = "render-frag"
path = "src/bin/render_frag.rs"

[[bin]]
name = "corpus"
path = "src/bin/corpus.rs"

[dependencies]
render_xhtml = { workspace = true }
render_tables = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
