[package]
name = "render_tables"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C2: byte-exact port of fhir-core's HierarchicalTableGenerator (org.hl7.fhir.utilities.xhtml)"

[lib]
name = "render_tables"

[dependencies]
render_xhtml = { workspace = true }

[dev-dependencies]
