[package]
name = "render_xhtml"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Byte-exact port of fhir-core's XhtmlComposer + XhtmlParser (org.hl7.fhir.utilities.xhtml)"

[lib]
name = "render_xhtml"

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"

[dependencies]

[dev-dependencies]
