[package]
name = "rust_sushi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rust_sushi"
path = "src/main.rs"

[dependencies]
compiler.workspace = true
package_acquisition.workspace = true
package_store.workspace = true
fsh_lexer_parser.workspace = true
fsh_model.workspace = true
diagnostics.workspace = true
anyhow.workspace = true
serde_json.workspace = true

# mimalloc is a C dependency (no wasm libc); native-only. Wasm falls back to the
# default allocator. See the cfg-gated #[global_allocator] in src/main.rs.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc.workspace = true
