[package]
name = "site_build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
site_db = { workspace = true, optional = true }

[features]
default = []
# Deliberately one-way: SiteBuild is the core contract. The current prepared
# site row model may be projected into typed artifacts during migration, but it
# never enters the core wire contract.
site-db-projections = ["dep:site_db"]
# Keep the aggregate v1 reader/producer available during the v2 migration.
site-db-compat = ["site-db-projections"]
