[package]
name = "site_build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
prepared_guide.workspace = true
content_store.workspace = true
tempfile.workspace = true
