[package]
name = "site_build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
wire-contract = ["dep:schemars", "dep:ts-rs", "content_store/wire-contract"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }
thiserror.workspace = true
prepared_guide.workspace = true
content_store.workspace = true
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
