[package]
name = "site_db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The `site_db` binary folded into `fig sitedb` (Consolidation Pass 2); the CLI
# entry point lives in the lib as `site_db::run_cli`, and the `site_db` alias
# binary is now provided by the `fig` crate (a deprecated shim over the same
# `run_cli`). This crate is lib-only.
[lib]
name = "site_db"
path = "src/lib.rs"

[dependencies]
# Internal crates — consumed via PUBLIC APIs only.
compiler.workspace = true          # build_project_with_cache (S1/S2)
snapshot_gen.workspace = true      # generate_snapshot + PackageContext (S3)
json_emit.workspace = true         # to_fhir_json_string (byte-stable FHIR JSON)

# External
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# SQLite sink (native only; the row model is sqlite-free so a wasm build can
# emit rows as JSON for a JS-side writer — see writer.rs / §5 of the plan).
# Gated behind the default `sqlite` feature so wasm_api can depend on this crate
# with `default-features = false` and get the row model + in-memory pipeline with
# NO C-sqlite in the wasm build (§5).
rusqlite = { workspace = true, optional = true }

[features]
default = ["sqlite"]
# The native SQLite writer (S7) + the disk `main` CLI. Off for the wasm build.
sqlite = ["dep:rusqlite"]

[dev-dependencies]
tempfile = { workspace = true }
