[package]
name = "site_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Target-neutral FHIR IG site execution shared by native and WASM hosts"

[features]
wire-contract = ["dep:api_envelope", "api_envelope/wire-contract", "dep:schemars", "dep:ts-rs", "content_store/wire-contract", "package_store/wire-contract", "site_build/wire-contract"]

[dependencies]
api_envelope = { workspace = true, optional = true }
compiler = { workspace = true }
content_store = { workspace = true }
package_store = { workspace = true }
prepared_guide = { workspace = true }
render_page = { workspace = true }
render_sd = { workspace = true }
snapshot_gen = { workspace = true }
site_build = { workspace = true }
site_producer = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

[[bin]]
name = "export_typescript"
path = "src/bin/export_typescript.rs"
required-features = ["wire-contract"]

[dev-dependencies]
render_liquid = { workspace = true }
tempfile = { workspace = true }
