[package]
name = "site_producer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Publisher projection: synthesize stock-template page shells, data, includes, and runtime assets from a prepared FHIR guide."

[lib]
name = "site_producer"

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
package_store = { workspace = true }
site_build = { workspace = true }
json_emit = { workspace = true }

[dev-dependencies]
